--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "personal-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,9 +12,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^8.17.1"
+    "ajv": "^8.17.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
